tests/invariants/pass/homogeneous.act
constructor of Homogeneous
interface constructor()

creates
	uint256 x := 3
	uint256 y := 5
	uint256 z := 15

invariants
	x * y == z


behaviour f of Homogeneous
interface f(uint256 scalar)

iff
	x * scalar > x
	z * scalar > z

storage
	x <- x * scalar
	z <- z * scalar


behaviour g of Homogeneous
interface g(uint256 scalar)

iff
	y * scalar > y
	z * scalar > z

storage
	y <- y * scalar
	z <- z * scalar
